Name:                yackage
Version:             0.6.0.2
Synopsis:            Personal Hackage replacement for testing new packages.
Description:
    This package installs a yackage executable that runs a simplistic hackage-like server. It allows you to upload packages produced via cabal sdist and install them via cabal. The trick is to add the yackage repository to your cabal config file, with a line such as:
    .
    remote-repo: yackage:http://localhost:3500/

Homepage:            http://github.com/snoyberg/yackage
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Distribution, Web, Yesod
Build-type:          Simple
Cabal-version:       >=1.6

flag upload
  default: True
  description: Whether to build the yackage-upload helper program.

Executable yackage
  Main-is:             yackage.hs
  Build-depends:       base >= 4 && < 5
                     , yesod-core >= 1.1 && < 1.2
                     , warp >= 1.3 && < 1.4
                     , Cabal
                     , bytestring
                     , text
                     , zlib
                     , tar
                     , containers
                     , directory
                     , yaml
                     , cmdargs
                     , wai >= 1.3 && < 1.4
                     , transformers
                     , hamlet
                     , yesod-form >= 1.1 && < 1.3
                     , http-types >= 0.6 && < 0.8
                     , blaze-html >= 0.5 && < 0.6
                     , vector
                     , unordered-containers
                     , conduit

Executable yackage-upload
  Main-is:             yackage-upload.hs
  if flag(upload)
      Build-depends:       base >= 4 && < 5
                         , http-conduit >= 1.5 && < 1.9
                         , blaze-builder >= 0.2.1.3 && < 0.4
                         , bytestring
  else
    Buildable: False
  
source-repository head
  type:     git
  location: git://github.com/snoyberg/yackage.git
