Name:                yackage
Version:             0.8.0
Synopsis:            Personal Hackage replacement for testing new packages.
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/yackage>.
Homepage:            http://github.com/snoyberg/yackage
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Distribution, Web, Yesod
Build-type:          Simple
Cabal-version:       >=1.6
extra-source-files:  ChangeLog.md README.md

flag upload
  default: True
  description: Whether to build the yackage-upload helper program.

Executable yackage
  Main-is:             yackage.hs
  Build-depends:       base >= 4 && < 5
                     , yesod-core >= 1.4
                     , warp >= 3.1
                     , Cabal
                     , bytestring
                     , text
                     , zlib
                     , tar
                     , containers
                     , directory
                     , yaml
                     , cmdargs
                     , wai >= 1.4
                     , transformers
                     , shakespeare
                     , yesod-form >= 1.3
                     , http-types >= 0.6
                     , blaze-html >= 0.5
                     , vector
                     , unordered-containers
                     , conduit

Executable yackage-upload
  Main-is:             yackage-upload.hs
  if flag(upload)
      Build-depends:       base >= 4 && < 5
                         , http-conduit >= 1.9
                         , blaze-builder >= 0.2.1.3
                         , bytestring
  else
    Buildable: False
  
source-repository head
  type:     git
  location: git://github.com/snoyberg/yackage.git
